# FluidFlow

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
data/: load_onera_crm.py
docs/: index.html  styles.css
fluidFlow/: __init__.py  attention.py  basic_modules.py  dit.py  moe.py  trainer.py  unet.py
fluidFlow/flow_matching/: __init__.py  integrators.py  transport.py
scripts/: example_synthetic_data.py  train_onera_crm.py
web/: index.html  styles.css
